--- a/form-validator/index.html
+++ b/form-validator/index.html
@@ -27,7 +27,7 @@
           <small>Error message</small>
         </div>
         <div class="form-control">
-          <label for="password2">Confirm Password</label>
+          <label for="password2">Confirm Passwordd</label>
           <input
             type="password"
             id="password2"
