#Form Validator, checkLenght

--- a/form-validator/index.html
+++ b/form-validator/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <form id="form" class="form">
-        <h2>Register With Us</h2>
+        <h2>Register With Us - My Version</h2>
         <div class="form-control">
           <label for="username">Username</label>
           <input type="text" id="username" placeholder="Enter username" />
@@ -27,7 +27,7 @@
           <small>Error message</small>
         </div>
         <div class="form-control">
-          <label for="password2">Confirm Passwordd</label>
+          <label for="password2">Confirm Password</label>
           <input
             type="password"
             id="password2"
